# BsuirForGeysV5

./: BsuirForGeysV5.sln  CMakeLists.txt
IGPM1/: IGPM1.cpp  IGPM1.vcxproj  IGPM1.vcxproj.filters
IGPM2/: CMakeLists.txt  IGPM2.vcxproj  IGPM2.vcxproj.filters  mainwindow.cpp  mainwindow.h
IGPM3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
IGPM4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
IGPM5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
IGPM6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
